[gd_scene load_steps=4 format=2]

[ext_resource path="res://Art Packs/CosmicEffects/Time2/Cosmic_09.png" type="Texture" id=1]
[ext_resource path="res://Levels/DecisionZone.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 36.8723

[node name="DecisionZone" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.98952, -1.84971 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
